src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDateTime__c</fullName>
        <description>ActivityDateTime</description>
        <inlineHelpText>ActivityDateTime</inlineHelpText>
        <label>ActivityDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AdditionalPrograms__c</fullName>
        <description>This field is used to capture the false programs.</description>
        <label>Additional Programs</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationFee__c</fullName>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApptusQuoteID__c</fullName>
        <label>Apptus Quote ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will automatically get checked based on number of days crossed.</description>
        <label>Auto Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignQuestionsAnswer__c</fullName>
        <label>Campaign Questions Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>Its the Closedate if Activity</description>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CloseMainReason__c</fullName>
        <label>Close Main Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ResultType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Had no intention</fullName>
                </value>
                <value>
                    <fullName>Lost to competitor</fullName>
                </value>
                <value>
                    <fullName>Had intention and money, but chose to do something else</fullName>
                </value>
                <value>
                    <fullName>Has no means</fullName>
                </value>
                <value>
                    <fullName>Finds EF offer too expensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseSubReason__c</fullName>
        <label>Close Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CloseMainReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor is cheaper</fullName>
                </value>
                <value>
                    <fullName>Has better reputation</fullName>
                </value>
                <value>
                    <fullName>Better Service</fullName>
                </value>
                <value>
                    <fullName>Competitors has more things included in the price</fullName>
                </value>
                <value>
                    <fullName>More flexible</fullName>
                </value>
                <value>
                    <fullName>Better offer</fullName>
                </value>
                <value>
                    <fullName>Replied faster</fullName>
                </value>
                <value>
                    <fullName>Bigger brand</fullName>
                </value>
                <value>
                    <fullName>My friend is going with a competitor</fullName>
                </value>
                <value>
                    <fullName>Has local office</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the user who has closed it.</description>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRequest__c</fullName>
        <description>Specifies which Task is Linked to which Customer Request on Task Record Level.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; EventId__c , &quot;Customer Request&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureCity__c</fullName>
        <label>Departure City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DestinationCode__c</fullName>
        <label>Destination Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <label>Device Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etag__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Etag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <description>Stores customer Request id in Task.</description>
        <label>EventId(Customer Request Id)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FalseBrochureProgramCodes__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>False Brochure Program Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <label>Follow-Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FormSubmissionID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>FormSubmission ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InfoMeetingID__c</fullName>
        <label>InfoMeeting ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertBy__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Insert By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertDate__c</fullName>
        <label>Insert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEBrochure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Is EBrochure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExpressCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ExpressCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsJunior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Junior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is UP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyWord__c</fullName>
        <label>Key Word</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LatestEntrySourceCode__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Latest Entry Source Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestEtag__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Latest Etag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestKeywords__c</fullName>
        <label>Latest Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LatestPartnerCode__c</fullName>
        <label>Latest Partner Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP Reply Card</fullName>
                </value>
                <value>
                    <fullName>APP Reply Card</fullName>
                </value>
                <value>
                    <fullName>Aupair Kft</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>CLT Reply Card</fullName>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Exhibition/Fair</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Gewinnspiel</fullName>
                </value>
                <value>
                    <fullName>HSY Reply Card</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>LS Reply Card</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Mobile Site</fullName>
                </value>
                <value>
                    <fullName>Multi-Flyer</fullName>
                </value>
                <value>
                    <fullName>Multi-Replycard</fullName>
                </value>
                <value>
                    <fullName>Not known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Reply Card</fullName>
                </value>
                <value>
                    <fullName>Reply Card EFC</fullName>
                </value>
                <value>
                    <fullName>Reply Card FD</fullName>
                </value>
                <value>
                    <fullName>Reply Card LT</fullName>
                </value>
                <value>
                    <fullName>SCH Reply Card</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge_Reason__c</fullName>
        <label>Merge Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalDueDate__c</fullName>
        <description>This field captured the Initial Due-date.</description>
        <label>Original Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PartnerCode__c</fullName>
        <label>Partner Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processedfortaskcreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be help full weather tasks are created for particular customer activity or not?</description>
        <label>Processedfortaskcreation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Field is used to map program from lead to a customer request.</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuotationID__c</fullName>
        <label>Quotation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservedArticles__c</fullName>
        <label>Reserved Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReservedCoursePrice__c</fullName>
        <label>Reserved Course Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservedPrice__c</fullName>
        <label>Reserved Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResultType__c</fullName>
        <inlineHelpText>Enter Result Type for call logged in.</inlineHelpText>
        <label>Result Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesAction__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next Call</fullName>
                </value>
                <value>
                    <fullName>Call Appointment</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Change Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesAction__c</fullName>
        <label>Sales Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Reached</fullName>
                </value>
                <value>
                    <fullName>Call Not Reached</fullName>
                </value>
                <value>
                    <fullName>Called Us</fullName>
                </value>
                <value>
                    <fullName>Visited Us</fullName>
                </value>
                <value>
                    <fullName>Emailed Us</fullName>
                </value>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Social Media Reached</fullName>
                </value>
                <value>
                    <fullName>Social Media Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolCity__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>School City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>School ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>School Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCodeAuto__c</fullName>
        <label>Source Code Auto</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCodeGroup__c</fullName>
        <label>Source Code Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartWhen__c</fullName>
        <label>Start When</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubActions__c</fullName>
        <inlineHelpText>Select Sub Action if call not reached.</inlineHelpText>
        <label>Sub Actions</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesAction__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Missing Number</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not at Home</fullName>
                </value>
                <value>
                    <fullName>Busy can’t talk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskResult__c</fullName>
        <description>It captures the result of Task created.</description>
        <label>Task Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Brochure</fullName>
                </value>
                <value>
                    <fullName>CallReached</fullName>
                </value>
                <value>
                    <fullName>Sent Quotation</fullName>
                </value>
                <value>
                    <fullName>Will not Send Brochure</fullName>
                </value>
                <value>
                    <fullName>Reached - Call</fullName>
                </value>
                <value>
                    <fullName>Not Reached - Call</fullName>
                </value>
                <value>
                    <fullName>Reached - Called Us</fullName>
                </value>
                <value>
                    <fullName>Reached -Visited Us</fullName>
                </value>
                <value>
                    <fullName>Reached -Emailed Us</fullName>
                </value>
                <value>
                    <fullName>Reached - Social media</fullName>
                </value>
                <value>
                    <fullName>Not Reached - Social media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskSubResult__c</fullName>
        <description>It captures the Sub Result of Task created. Basically after Sales user tried contacting customer.</description>
        <label>Task SubResult</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next Call/Follow-up</fullName>
                    <default>true</default>
                    <label>Next Call/Follow-up</label>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskType__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TCC</fullName>
                </value>
                <value>
                    <fullName>UCC</fullName>
                </value>
                <value>
                    <fullName>FUP</fullName>
                </value>
                <value>
                    <fullName>FUA</fullName>
                </value>
                <value>
                    <fullName>HCC</fullName>
                </value>
                <value>
                    <fullName>HCF</fullName>
                </value>
                <value>
                    <fullName>SPQ</fullName>
                </value>
                <value>
                    <fullName>SBR</fullName>
                </value>
                <value>
                    <fullName>MCR</fullName>
                </value>
                <value>
                    <fullName>RCP</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Transportation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TritonId__c</fullName>
        <description>Triton Id</description>
        <inlineHelpText>Triton Id</inlineHelpText>
        <label>Triton Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserSelectedSourceCode__c</fullName>
        <label>User Selected Source Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebOnlinePaymentTXLogID__c</fullName>
        <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
        <label>Web Online Payment TX Log ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>